samples/_failures_safe/1761368135_2fa63d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16806ad0.c: In function ‘main’:
./samples/SAFE/__tmp_16806ad0.c:142:5: error: expected expression at end of input
  142 |     for (
      |     ^~~
./samples/SAFE/__tmp_16806ad0.c:142:5: error: expected declaration or statement at end of input
